<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragments.MatchedDialogFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/its_a_match"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/send_a_message"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_a_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/avatarView"
        app:layout_constraintStart_toStartOf="@+id/avatarView"
        app:layout_constraintTop_toBottomOf="@+id/avatarView" />

    <Button
        android:id="@+id/skip"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/keep_looking"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/avatarView"
        app:layout_constraintStart_toStartOf="@+id/avatarView"
        app:layout_constraintTop_toBottomOf="@+id/send_a_message" />

    <Button
        android:id="@+id/undo"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/undo"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/skip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/avatarView"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

</android.support.constraint.ConstraintLayout>