<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/meetPeopleFragment">

    <fragment
        android:id="@+id/messagingMatchesFragment"
        android:name="com.example.calhamnorthway.group17projectpart4.fragments.MessagingMatchesFragment"
        android:label="@string/messages_and_matches"
        tools:layout="@layout/fragment_messaging_matches" >
        <action
            android:id="@+id/action_messagingMatchesFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
        <action
            android:id="@+id/action_messagingMatchesFragment_to_conversationFragment"
            app:destination="@id/conversationFragment" />
    </fragment>
    <fragment
        android:id="@+id/meetPeopleFragment"
        android:name="com.example.calhamnorthway.group17projectpart4.fragments.MeetPeopleFragment"
        android:label="@string/meet_new_people"
        tools:layout="@layout/fragment_meet_people" >
    <action
        android:id="@+id/action_meetPeopleFragment_to_profileDetailsFragment"
        />
        <action
            android:id="@+id/action_meetPeopleFragment_to_imageFragment"
            app:destination="@id/imageFragment" />
        <action
            android:id="@+id/action_meetPeopleFragment_to_conversationFragment"
            app:destination="@id/conversationFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileDetailsFragment"
        android:name="com.example.calhamnorthway.group17projectpart4.fragments.ProfileDetailsFragment"
        android:label="@string/blank"
        tools:layout="@layout/fragment_profile_details" >
        <action
            android:id="@+id/action_profileDetailsFragment_to_imageFragment"
            app:destination="@id/imageFragment" />
        <action
            android:id="@+id/action_profileDetailsFragment_to_conversationFragment"
            app:destination="@id/conversationFragment" />
    </fragment>
    <fragment
        android:id="@+id/conversationFragment"
        android:name="com.example.calhamnorthway.group17projectpart4.fragments.messaging.MessagingFragment"
        android:label="@string/blank"
        tools:layout="@layout/fragment_conversation" >
        <action
            android:id="@+id/action_conversationFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageFragment"
        android:name="com.example.calhamnorthway.group17projectpart4.fragments.profileDetails.ImageFragment"
        android:label="@string/blank"
        tools:layout="@layout/fragment_image" />
</navigation>